--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://pangpanglabs.github.io/overview/"/>
+    <meta http-equiv="refresh" content="0; url=https://pangpanglabs.github.io/introduction/"/>
 </style>
   </head>
   <body>
